fix: 🐛 scrollbar & messages styles

--- a/src/components/chat/messages/Messages.module.scss
+++ b/src/components/chat/messages/Messages.module.scss
@@ -4,5 +4,5 @@
 
   gap: 10px;
 
-  padding: 10px 20px;
+  padding: 10px 15px;
 }
